--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "ProkGen"
 author: "Bradd Mendoza"
-description: "Curso Genómica de Procariontes"
+description: "Bradd Mendoza"
 permalink: /:title/
 lang: "es"
 excerpt_separator: "\n\n\n"
