--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: _posts/"2017-01-01-advanced-examples.md", title: "Presentaciones"}
+  - {file: "_posts/2017-01-01-advanced-examples.md"}
   - {file: "Scripts/", title: "Scripts"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
