--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "ProkGen"
+title: <font color="#9900FF"> "ProkGen" </font>
 author: "Bradd Mendoza"
 description: "Bradd Mendoza"
 permalink: /:title/
