--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <font color="#9900FF"> "ProkGen" </font>
+title: <h1 style="background-color:powderblue;"> "ProkGen" </h1>
 author: "Bradd Mendoza"
 description: "Bradd Mendoza"
 permalink: /:title/
