--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <h1 style="background-color:powderblue;"> "ProkGen" </h1>
+<h1 style="color:blue;"> title:  "ProkGen" </h1>
 author: "Bradd Mendoza"
 description: "Bradd Mendoza"
 permalink: /:title/
