--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-<h1 style="color:blue;"> title:  "ProkGen" </h1>
+title:  "ProkGen" 
+fontsize: 30
 author: "Bradd Mendoza"
 description: "Bradd Mendoza"
 permalink: /:title/
