--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,9 @@ external:                  # shows a footer with social links - for available ic
   - {title: Subscribe, icon: rss, url: "https://www.linkedin.com/in/bradd-mendoza-0893a8164/"}
 
 comments:
-#  disqus_shortname: ""    # see https://disqus.com/
-#  isso_domain: ""         # see https://posativ.org/isso/
+
+remote_theme: pages-themes/cayman@v0.2.0
 
 plugins:
  - jekyll-feed
+ - jekyll-remote-theme
