--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title:  "ProkGen" 
+title:  "GenPro" 
 author: "Bradd Mendoza"
 description: "Bradd Mendoza"
-avatar: "/assets/2.png"
 permalink: /:title/
 lang: "es"
 excerpt_separator: "\n\n\n"
